Refactor main.html for improved layout and content
Updated the main HTML structure to include a header and hero section, and modified the features and about sections for better presentation.

--- a/website/Styles/main.html
+++ b/website/Styles/main.html
@@ -3,105 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Furnish</title>
+
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="main">
-        <nav class="nav">
-            <div class="logo">
-                <h1>Furnish</h1>
-            </div>
-
+    <header class="header">
+        <div class="logo">Furnish</div>
+        <nav class="menu">
+            <a href="#">Home</a>
+            <a href="#">Shop</a>
+            <a href="#">About</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
         </nav>
+    </header>
 
-        <section>
-            <div class="feature">
-                <div class="handshake">
-                    <div class="img shake"></div>
-                    <h3 class="fn-section-heading headings">Amazing Deals</h3>
-                    <p class="fn-section-tagline">Great Reviews for Our Services Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div class="quality">
-                    <div class="img"></div>
-                    <h3 class="fn-section-heading headings">Quality Furniture</h3>
-                    <p class="fn-section-tagline">Great Reviews for Our Services Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div class="modern">
-                    <div class="img"></div>
-                    <h3 class="fn-section-heading
-                     headings">Modern Design</h3>
-                    <p class="fn-section-tagline">Great Reviews for Our Services Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div class="support">
-                    <div class="img"></div>
-                    <h3 class="fn-section-heading headings">Best Support</h3>
-                    <p class="fn-section-tagline">Great Reviews for Our Services Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
+    <section class="hero">
 
-            </div>
+        <div class="hero-left">
+            <p class="fn-section-tagline">Welcome to Furnish</p>
+            <h1>
+                Best Design of <br>
+                Furniture Collections
+            </h1>
+            <p>
+                A small river named Duden flows by their place and supplies it with the necessary regelialia.
+            </p>
+            <a href="#" class="hero-btn">Discover</a>
+        </div>
 
-        </section>
-        <section class="bg1">
-            <p class="fn-section-tagline">Great Reviews for Our Services</p>
-            <h2 class="fn-section-heading">Technical Statistics</h2>
+        <div class="hero-right">
+            <img src="table.webp" alt="Furniture">
+        </div>
 
-            <div class="fn-stats">
-                    <div class="stat-info">
-                        <h2 class="fn-section-heading">20</h2>
-                        <p class="fn-section-tagline">Years of Experience</p>
-                    </div>
-                    <div class="stat-info">
-                        <h2 class="fn-section-heading">10200</h2>
-                        <p class="fn-section-tagline">Satisfied Customer</p>
-                    </div>
-                    <div class="stat-info">
-                        <h2 class="fn-section-heading">9850</h2>
-                        <p class="fn-section-tagline">Project Completed</p>
-                    </div>
-                    <div class="stat-info">
-                        <h2 class="fn-section-heading">20</h2>
-                        <p class="fn-section-tagline">Awards</p>
-                    </div>     
-            </div>
-        </section>
-        <section>
-             <p class="fn-section-tagline">Production Flows</p>
-            <h2 class="fn-section-heading">How it Works</h2>
+    </section>
 
-            <div class="fn-stats">
-                    <div class="img-info">
-                        <div class="img">
-                            <div></div>
+<section class="features">
 
-                            <div class="small_img">01</div>
-                        </div>
-                        <h3 class="fn-section-heading text">Get A Free Quote</h3>
-                        <p class="fn-section-tagline">Lorem ipsum dolor sit amet, consectetur adipisici.</p>
-                    </div>
-                    <div class="img-info">
-                        <div class="img">
-                            <div class="small_img">02</div>
-                        </div>
-                        <h4 class="fn-section-heading text">Production</h4>
-                        <p class="fn-section-tagline">Lorem ipsum dolor sit amet consectetur adipisicing!</p>
-                    </div>
-                    <div class="img-info">
-                        <div class="img">
-                            <div class="small_img">03</div>
-                        </div>
-                        <h3 class="fn-section-heading text">Delivery & Assembly</h3>
-                        <p class="fn-section-tagline">Lorem ipsum dolor sit amet, consectetur adipisici.</p>
-                    </div> 
-            </div><br>
-            <div class="btn">
-                <div class="button">Learn More</div>
-                <div class="button">Get A Request</div>
-            </div>            
-            
-        </section>
+    <div class="feature-card pink">
+        <div class="icon">🤝</div>
+        <h3>Amazing Deals</h3>
+        <p>
+            Far far away, behind the word mountains, far from the countries Vokalia.
+        </p>
     </div>
-    
+
+    <div class="feature-card green">
+        <div class="icon">🪑</div>
+        <h3>Quality Furniture</h3>
+        <p>
+            Far far away, behind the word mountains, far from the countries Vokalia.
+        </p>
+    </div>
+
+    <div class="feature-card yellow">
+        <div class="icon">🛋️</div>
+        <h3>Modern Design</h3>
+        <p>
+            Far far away, behind the word mountains, far from the countries Vokalia.
+        </p>
+    </div>
+
+    <div class="feature-card orange">
+        <div class="icon">🎧</div>
+        <h3>Best Support</h3>
+        <p>
+            Far far away, behind the word mountains, far from the countries Vokalia.
+        </p>
+    </div>
+
+</section>
+<section class="about">
+    <div class="about-left">
+        <img src="images/about-woman.png" alt="About Furnish"> 
+    </div>
+    <div class="about-right">
+        <p class="fn-section-tagline">About Furnish</p>
+        <h2 class="fn-section-heading">Quality Makes the Belief for Customers</h2>
+        <p class="about-text">
+            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. 
+            Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+        </p>
+        <a href="#" class="watch-btn">
+            <span>▶</span> Watch Video
+        </a>
+    </div>
+</section>
+
+
 </body>
 </html>
